# franka_ros2_teleop_data_collection

./: .gitignore  Dockerfile.updated  README.md  docker-compose.with_collector.yml  docker-compose.yml  franka_data_inspector.py  output.txt  project_structure.txt
Scripts/: gripper_controller.py
franka_data/: franka_follower_20260223_162545_final_20260223_162556.npy  franka_follower_20260223_162853_final_20260223_162903.npy  franka_follower_20260223_163055_final_20260223_163105.npy  franka_follower_final.npy  polts.ipynb
franka_data_collector/: CMakeLists.txt  README.md  package.xml
franka_data_collector/config/: data_collector_params.yaml
franka_data_collector/franka_data_collector/: data_collector_node.py  data_collector_with_vel_node.py
franka_data_collector/launch/: data_collector.launch.py
outputs/html/: trajectory_3d_2d.html  trajectory_interactive.html
